hphp/hack/test/typecheck/coeffects/default_bottom.php.exp
File "default_bottom.php", line 6, characters 3-8:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "default_bottom.php", line 5, characters 16-17:
  From this declaration, the context of this function body provides the capability set {}
  File "default_bottom.php", line 3, characters 10-15:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
