hphp/hack/test/typecheck/coeffects/default_bottom.php
<?hh

function impure(): void {}

function pure()[]: void {
  impure();
}
